[gd_scene load_steps=5 format=4 uid="uid://burmdn5f46l1p"]

[ext_resource type="Script" uid="uid://byxwvdo8egcoy" path="res://Arenas/entrance.gd" id="1_tyfhc"]
[ext_resource type="PackedScene" uid="uid://lpg18dynrpiy" path="res://Arenas/tile_map_layer.tscn" id="2_e71j0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tyfhc"]
size = Vector2(109, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e71j0"]
size = Vector2(112, 20)

[node name="Entrance" type="Node2D"]
script = ExtResource("1_tyfhc")

[node name="TileMapLayer" parent="." instance=ExtResource("2_e71j0")]
tile_map_data = PackedByteArray("AAAbABAAAQABAAYAAAAbAA8AAQABAAYAAAAbAA4AAQABAAYAAAAbAA0AAQABAAYAAAAbAAwAAQABAAYAAAAbAAsAAQABAAYAAAAbAAoAAQABAAYAAAAbAAkAAQABAAYAAAAbAAgAAQABAAYAAAAbAAcAAQABAAYAAAAbAAYAAQABAAYAAAAbAAUAAQABAAYAAAAbAAQAAQABAAYAAAAbAAMAAQABAAYAAAAbAAIAAQABAAYAAAAbAAEAAQABAAYAAAAbAAAAAQABAAYAAAAaABAAAQABAAYAAAAaAA8AAQAEAAYAAAAaAA4AAQAEAAYAAAAaAA0AAQAEAAYAAAAaAAwAAQAEAAYAAAAaAAsAAQAEAAYAAAAaAAoAAQAEAAYAAAAaAAkAAQAEAAYAAAAaAAgAAQAEAAYAAAAaAAcAAQAEAAYAAAAaAAYAAQAEAAYAAAAaAAUAAQAEAAYAAAAaAAQAAQAEAAYAAAAaAAMAAQAEAAYAAAAaAAIAAQAEAAYAAAAaAAEAAQAEAAYAAAAaAAAAAQAEAAUAAAAZABAAAQABAAYAAAAZAA8AAQAEAAYAAAAZAA4AAQAEAAYAAAAZAA0AAQAEAAYAAAAZAAwAAQAEAAYAAAAZAAsAAQAEAAYAAAAZAAoAAQAEAAYAAAAZAAkAAQAEAAYAAAAZAAgAAQAEAAYAAAAZAAcAAQAEAAYAAAAZAAYAAQAEAAYAAAAZAAUAAQAEAAYAAAAZAAQAAQAEAAYAAAAZAAMAAQAEAAYAAAAZAAIAAQAEAAYAAAAZAAEAAQAEAAYAAAAZAAAAAQAEAAUAAAAYABAAAQABAAYAAAAYAA8AAQAEAAYAAAAYAA4AAQAEAAYAAAAYAA0AAQAEAAYAAAAYAAwAAQAEAAYAAAAYAAsAAQAEAAYAAAAYAAoAAQAEAAYAAAAYAAkAAQAEAAYAAAAYAAgAAQAEAAYAAAAYAAcAAQAEAAYAAAAYAAYAAQAEAAYAAAAYAAUAAQAEAAYAAAAYAAQAAQAEAAYAAAAYAAMAAQAEAAYAAAAYAAIAAQAEAAYAAAAYAAEAAQAEAAYAAAAYAAAAAQAEAAUAAAAXABAAAQABAAYAAAAXAA8AAQAEAAYAAAAXAA4AAQAEAAYAAAAXAA0AAQAEAAYAAAAXAAwAAQAEAAYAAAAXAAsAAQAEAAYAAAAXAAoAAQAEAAYAAAAXAAkAAQAEAAYAAAAXAAgAAQAEAAYAAAAXAAcAAQAEAAYAAAAXAAYAAQAEAAYAAAAXAAUAAQAEAAYAAAAXAAQAAQAEAAYAAAAXAAMAAQAEAAYAAAAXAAIAAQAEAAYAAAAXAAEAAQAEAAYAAAAXAAAAAQAEAAUAAAAWABAAAQABAAYAAAAWAA8AAQAEAAYAAAAWAA4AAQAEAAYAAAAWAA0AAQAEAAYAAAAWAAwAAQAEAAYAAAAWAAsAAQAEAAYAAAAWAAoAAQAEAAYAAAAWAAkAAQAEAAYAAAAWAAgAAQAEAAYAAAAWAAcAAQAEAAYAAAAWAAYAAQAEAAYAAAAWAAUAAQAEAAYAAAAWAAQAAQAEAAYAAAAWAAMAAQAEAAYAAAAWAAIAAQAEAAYAAAAWAAEAAQAEAAYAAAAWAAAAAQAEAAUAAAAVABAAAQABAAYAAAAVAA8AAQAEAAYAAAAVAA4AAQAEAAYAAAAVAA0AAQAEAAYAAAAVAAwAAQAEAAYAAAAVAAsAAQAEAAYAAAAVAAoAAQAEAAYAAAAVAAkAAQAEAAYAAAAVAAgAAQAEAAYAAAAVAAcAAQAEAAYAAAAVAAYAAQAEAAYAAAAVAAUAAQAEAAYAAAAVAAQAAQAEAAYAAAAVAAMAAQAEAAYAAAAVAAIAAQAEAAYAAAAVAAEAAQAEAAYAAAAVAAAAAQAEAAUAAAAUABAAAQABAAYAAAAUAA8AAQAEAAYAAAAUAA4AAQAEAAYAAAAUAA0AAQAEAAYAAAAUAAwAAQAEAAYAAAAUAAsAAQAEAAYAAAAUAAoAAQAEAAYAAAAUAAkAAQAEAAYAAAAUAAgAAQAEAAYAAAAUAAcAAQAEAAYAAAAUAAYAAQAEAAYAAAAUAAUAAQAEAAYAAAAUAAQAAQAEAAYAAAAUAAMAAQAEAAYAAAAUAAIAAQAEAAYAAAAUAAEAAQAEAAYAAAAUAAAAAQAEAAUAAAATABAAAQABAAYAAAATAA8AAQAEAAYAAAATAA4AAQAEAAYAAAATAA0AAQAEAAYAAAATAAwAAQAEAAYAAAATAAsAAQAEAAYAAAATAAoAAQAEAAYAAAATAAkAAQAEAAYAAAATAAgAAQAEAAYAAAATAAcAAQAEAAYAAAATAAYAAQAEAAYAAAATAAUAAQAEAAYAAAATAAQAAQAEAAYAAAATAAMAAQAEAAYAAAATAAIAAQAEAAYAAAATAAEAAQAEAAYAAAATAAAAAQABAAYAAAASABAAAQABAAYAAAASAA8AAQAEAAYAAAASAA4AAQAEAAYAAAASAA0AAQAEAAYAAAASAAwAAQAEAAYAAAASAAsAAQAEAAYAAAASAAoAAQAEAAYAAAASAAkAAQAEAAYAAAASAAgAAQAEAAYAAAASAAcAAQAEAAYAAAASAAYAAQAEAAYAAAASAAUAAQAEAAYAAAASAAQAAQAEAAYAAAASAAMAAQAEAAYAAAASAAIAAQAEAAYAAAASAAEAAQAEAAYAAAASAAAAAQABAAYAAAARABAAAQABAAYAAAARAA8AAQAEAAYAAAARAA4AAQAEAAYAAAARAA0AAQAEAAYAAAARAAwAAQAEAAYAAAARAAsAAQAEAAYAAAARAAoAAQAEAAYAAAARAAkAAQAEAAYAAAARAAgAAQAEAAYAAAARAAcAAQAEAAYAAAARAAYAAQAEAAYAAAARAAUAAQAEAAYAAAARAAQAAQAEAAYAAAARAAMAAQAEAAYAAAARAAIAAQAEAAYAAAARAAEAAQAEAAYAAAARAAAAAQABAAYAAAAQABAAAQABAAYAAAAQAA8AAQAEAAYAAAAQAA4AAQAEAAYAAAAQAA0AAQAEAAYAAAAQAAwAAQAEAAYAAAAQAAsAAQAEAAYAAAAQAAoAAQAEAAYAAAAQAAkAAQAEAAYAAAAQAAgAAQAEAAYAAAAQAAcAAQAEAAYAAAAQAAYAAQAEAAYAAAAQAAUAAQAEAAYAAAAQAAQAAQAEAAYAAAAQAAMAAQAEAAYAAAAQAAIAAQAEAAYAAAAQAAEAAQAEAAYAAAAQAAAAAQABAAYAAAAPABAAAQABAAYAAAAPAA8AAQAEAAYAAAAPAA4AAQAEAAYAAAAPAA0AAQAEAAYAAAAPAAwAAQAEAAYAAAAPAAsAAQAEAAYAAAAPAAoAAQAEAAYAAAAPAAkAAQAEAAYAAAAPAAgAAQAEAAYAAAAPAAcAAQAEAAYAAAAPAAYAAQAEAAYAAAAPAAUAAQAEAAYAAAAPAAQAAQAEAAYAAAAPAAMAAQAEAAYAAAAPAAIAAQAEAAYAAAAPAAEAAQAEAAYAAAAPAAAAAQABAAYAAAAOABAAAQABAAYAAAAOAA8AAQAEAAYAAAAOAA4AAQAEAAYAAAAOAA0AAQAEAAYAAAAOAAwAAQAEAAYAAAAOAAsAAQAEAAYAAAAOAAoAAQAEAAYAAAAOAAkAAQAEAAYAAAAOAAgAAQAEAAYAAAAOAAcAAQAEAAYAAAAOAAYAAQAEAAYAAAAOAAUAAQAEAAYAAAAOAAQAAQAEAAYAAAAOAAMAAQAEAAYAAAAOAAIAAQAEAAYAAAAOAAEAAQAEAAYAAAAOAAAAAQABAAYAAAANABAAAQABAAYAAAANAA8AAQAEAAYAAAANAA4AAQAEAAYAAAANAA0AAQAEAAYAAAANAAwAAQAEAAYAAAANAAsAAQAEAAYAAAANAAoAAQAEAAYAAAANAAkAAQAEAAYAAAANAAgAAQAEAAYAAAANAAcAAQAEAAYAAAANAAYAAQAEAAYAAAANAAUAAQAEAAYAAAANAAQAAQAEAAYAAAANAAMAAQAEAAYAAAANAAIAAQAEAAYAAAANAAEAAQAEAAYAAAANAAAAAQABAAYAAAAMABAAAQABAAYAAAAMAA8AAQAEAAYAAAAMAA4AAQAEAAYAAAAMAA0AAQAEAAYAAAAMAAwAAQAEAAYAAAAMAAsAAQAEAAYAAAAMAAoAAQAEAAYAAAAMAAkAAQAEAAYAAAAMAAgAAQAEAAYAAAAMAAcAAQAEAAYAAAAMAAYAAQAEAAYAAAAMAAUAAQAEAAYAAAAMAAQAAQAEAAYAAAAMAAMAAQAEAAYAAAAMAAIAAQAEAAYAAAAMAAEAAQAEAAYAAAAMAAAAAQABAAYAAAALABAAAQABAAYAAAALAA8AAQAEAAYAAAALAA4AAQAEAAYAAAALAA0AAQAEAAYAAAALAAwAAQAEAAYAAAALAAsAAQAEAAYAAAALAAoAAQAEAAYAAAALAAkAAQAEAAYAAAALAAgAAQAEAAYAAAALAAcAAQAEAAYAAAALAAYAAQAEAAYAAAALAAUAAQAEAAYAAAALAAQAAQAEAAYAAAALAAMAAQAEAAYAAAALAAIAAQAEAAYAAAALAAEAAQAEAAYAAAALAAAAAQABAAYAAAAKABAAAQABAAYAAAAKAA8AAQAEAAYAAAAKAA4AAQAEAAYAAAAKAA0AAQAEAAYAAAAKAAwAAQAEAAYAAAAKAAsAAQAEAAYAAAAKAAoAAQAEAAYAAAAKAAkAAQAEAAYAAAAKAAgAAQAEAAYAAAAKAAcAAQAEAAYAAAAKAAYAAQAEAAYAAAAKAAUAAQAEAAYAAAAKAAQAAQAEAAYAAAAKAAMAAQAEAAYAAAAKAAIAAQAEAAYAAAAKAAEAAQAEAAYAAAAKAAAAAQABAAYAAAAJABAAAQABAAYAAAAJAA8AAQAEAAYAAAAJAA4AAQAEAAYAAAAJAA0AAQAEAAYAAAAJAAwAAQAEAAYAAAAJAAsAAQAEAAYAAAAJAAoAAQAEAAYAAAAJAAkAAQAEAAYAAAAJAAgAAQAEAAYAAAAJAAcAAQAEAAYAAAAJAAYAAQAEAAYAAAAJAAUAAQAEAAYAAAAJAAQAAQAEAAYAAAAJAAMAAQAEAAYAAAAJAAIAAQAEAAYAAAAJAAEAAQAEAAYAAAAJAAAAAQABAAYAAAAIABAAAQABAAYAAAAIAA8AAQAEAAYAAAAIAA4AAQAEAAYAAAAIAA0AAQAEAAYAAAAIAAwAAQAEAAYAAAAIAAsAAQAEAAYAAAAIAAoAAQAEAAYAAAAIAAkAAQAEAAYAAAAIAAgAAQAEAAYAAAAIAAcAAQAEAAYAAAAIAAYAAQAEAAYAAAAIAAUAAQAEAAYAAAAIAAQAAQAEAAYAAAAIAAMAAQAEAAYAAAAIAAIAAQAEAAYAAAAIAAEAAQAEAAYAAAAIAAAAAQABAAYAAAAHABAAAQABAAYAAAAHAA8AAQAEAAYAAAAHAA4AAQAEAAYAAAAHAA0AAQAEAAYAAAAHAAwAAQAEAAYAAAAHAAsAAQAEAAYAAAAHAAoAAQAEAAYAAAAHAAkAAQAEAAYAAAAHAAgAAQAEAAYAAAAHAAcAAQAEAAYAAAAHAAYAAQAEAAYAAAAHAAUAAQAEAAYAAAAHAAQAAQAEAAYAAAAHAAMAAQAEAAYAAAAHAAIAAQAEAAYAAAAHAAEAAQAEAAYAAAAHAAAAAQABAAYAAAAGABAAAQABAAYAAAAGAA8AAQAEAAYAAAAGAA4AAQAEAAYAAAAGAA0AAQAEAAYAAAAGAAwAAQAEAAYAAAAGAAsAAQAEAAYAAAAGAAoAAQAEAAYAAAAGAAkAAQAEAAYAAAAGAAgAAQAEAAYAAAAGAAcAAQAEAAYAAAAGAAYAAQAEAAYAAAAGAAUAAQAEAAYAAAAGAAQAAQAEAAYAAAAGAAMAAQAEAAYAAAAGAAIAAQAEAAYAAAAGAAEAAQAEAAYAAAAGAAAAAQABAAYAAAAFABAAAQABAAYAAAAFAA8AAQAEAAYAAAAFAA4AAQAEAAYAAAAFAA0AAQAEAAYAAAAFAAwAAQAEAAYAAAAFAAsAAQAEAAYAAAAFAAoAAQAEAAYAAAAFAAkAAQAEAAYAAAAFAAgAAQAEAAYAAAAFAAcAAQAEAAYAAAAFAAYAAQAEAAYAAAAFAAUAAQAEAAYAAAAFAAQAAQAEAAYAAAAFAAMAAQAEAAYAAAAFAAIAAQAEAAYAAAAFAAEAAQAEAAYAAAAFAAAAAQAEAAUAAAAEABAAAQABAAYAAAAEAA8AAQAEAAYAAAAEAA4AAQAEAAYAAAAEAA0AAQAEAAYAAAAEAAwAAQAEAAYAAAAEAAsAAQAEAAYAAAAEAAoAAQAEAAYAAAAEAAkAAQAEAAYAAAAEAAgAAQAEAAYAAAAEAAcAAQAEAAYAAAAEAAYAAQAEAAYAAAAEAAUAAQAEAAYAAAAEAAQAAQAEAAYAAAAEAAMAAQAEAAYAAAAEAAIAAQAEAAYAAAAEAAEAAQAEAAYAAAAEAAAAAQAEAAUAAAADABAAAQABAAYAAAADAA8AAQAEAAYAAAADAA4AAQAEAAYAAAADAA0AAQAEAAYAAAADAAwAAQAEAAYAAAADAAsAAQAEAAYAAAADAAoAAQAEAAYAAAADAAkAAQAEAAYAAAADAAgAAQAEAAYAAAADAAcAAQAEAAYAAAADAAYAAQAEAAYAAAADAAUAAQAEAAYAAAADAAQAAQAEAAYAAAADAAMAAQAEAAYAAAADAAIAAQAEAAYAAAADAAEAAQAEAAYAAAADAAAAAQAEAAUAAAACABAAAQABAAYAAAACAA8AAQAEAAYAAAACAA4AAQAEAAYAAAACAA0AAQAEAAYAAAACAAwAAQAEAAYAAAACAAsAAQAEAAYAAAACAAoAAQAEAAYAAAACAAkAAQAEAAYAAAACAAgAAQAEAAYAAAACAAcAAQAEAAYAAAACAAYAAQAEAAYAAAACAAUAAQAEAAYAAAACAAQAAQAEAAYAAAACAAMAAQAEAAYAAAACAAIAAQAEAAYAAAACAAEAAQAEAAYAAAACAAAAAQAEAAUAAAABABAAAQABAAYAAAABAA8AAQAEAAYAAAABAA4AAQAEAAYAAAABAA0AAQAEAAYAAAABAAwAAQAEAAYAAAABAAsAAQAEAAYAAAABAAoAAQAEAAYAAAABAAkAAQAEAAYAAAABAAgAAQAEAAYAAAABAAcAAQAEAAYAAAABAAYAAQAEAAYAAAABAAUAAQAEAAYAAAABAAQAAQAEAAYAAAABAAMAAQAEAAYAAAABAAIAAQAEAAYAAAABAAEAAQAEAAYAAAABAAAAAQAEAAUAAAAAABAAAQABAAYAAAAAAA8AAQAEAAYAAAAAAA4AAQAEAAYAAAAAAA0AAQAEAAYAAAAAAAwAAQAEAAYAAAAAAAsAAQAEAAYAAAAAAAoAAQAEAAYAAAAAAAkAAQAEAAYAAAAAAAgAAQAEAAYAAAAAAAcAAQAEAAYAAAAAAAYAAQAEAAYAAAAAAAUAAQAEAAYAAAAAAAQAAQAEAAYAAAAAAAMAAQAEAAYAAAAAAAIAAQAEAAYAAAAAAAEAAQAEAAYAAAAAAAAAAQAEAAUAAAD//wwAAQAEAAYAAAD//wsAAQAEAAYAAAD//woAAQAEAAYAAAD//wkAAQAEAAYAAAD//wgAAQAEAAYAAAD//wcAAQAEAAYAAAD//wYAAQAEAAYAAAD//wUAAQAEAAYAAAD//wQAAQAEAAYAAAD//wMAAQAEAAYAAAD//wIAAQAEAAYAAAD//wEAAQAEAAYAAAD//wAAAQAEAAUAAAD+/xAAAQABAAYAAAD+/w8AAQABAAYAAAD+/w4AAQABAAYAAAD+/w0AAQABAAYAAAD+/wwAAQABAAYAAAD+/wsAAQABAAYAAAD+/woAAQABAAYAAAD+/wkAAQABAAYAAAD+/wgAAQABAAYAAAD+/wcAAQABAAYAAAD+/wYAAQABAAYAAAD+/wUAAQABAAYAAAD+/wQAAQABAAYAAAD+/wMAAQABAAYAAAD+/wIAAQABAAYAAAD+/wEAAQABAAYAAAD+/wAAAQABAAYAAAD//w0AAQAEAAYAAAD//w4AAQAEAAYAAAD//w8AAQAEAAYAAAD//xAAAQABAAYAAAD+////AQABAAYAAAD/////AQABAAYAAAAAAP//AQABAAYAAAABAP//AQABAAYAAAACAP//AQABAAYAAAADAP//AQABAAYAAAAEAP//AQABAAYAAAAFAP//AQABAAYAAAAGAP//AQABAAYAAAATAP//AQABAAYAAAAUAP//AQABAAYAAAAVAP//AQABAAYAAAAWAP//AQABAAYAAAAXAP//AQABAAYAAAAYAP//AQABAAYAAAAZAP//AQABAAYAAAAaAP//AQABAAYAAAAbAP//AQABAAYAAAA=")

[node name="LocalEntrance" type="Area2D" parent="."]
position = Vector2(72, 9)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalEntrance"]
position = Vector2(-2.5, 0)
shape = SubResource("RectangleShape2D_tyfhc")

[node name="OnlineEntrance" type="Area2D" parent="."]
position = Vector2(408, 9)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnlineEntrance"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_e71j0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IntroLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -11.5
offset_right = 131.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PULSA UN BOTÓN PARA EMPEZAR"

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(232, 116)

[connection signal="body_entered" from="LocalEntrance" to="." method="_on_local_entrance_body_entered"]
